# Engine

./: .cursorignore  .env.example  .git-blame-ignore-revs  .gitignore  main.py  pyproject.toml  test.py
.claude/hooks/: session-start.sh
.codeindex/: codeindex.db  codeindex.db-shm
.github/workflows/: lint.yml
.pi/: settings.json  subagents.json
.pi/agents/: Explore.md  Plan.md  browser.md  researcher.md  scout.md  tester.md
.pi/prompts/: phase-step.md
client/: package-lock.json  vite.config.ts
client/src/: App.css  App.tsx  index.css  main.tsx  types.ts
docs/: bitd-integration-design.md  bitd_integration-design.md  code-style.md  domains.md  ecs-entity-conversion-guide.md  ecs-implementation-guide.md  framing-simplification-plan.md  graph-flow-review.md  graph-refactor-plan.md  representation-ecs-design.md  turn-resolution-concurrency.md  worldgen-algorithms.md  worldgen-architecture-redesign.md  worldgen-biome-coherence-plan.md  worldgen-climate-biome-redesign.md  worldgen-convergence-rain-plan.md  worldgen-magic-redesign-plan.md  worldgen-ocean-currents-plan.md  worldgen-precipitation-redesign-plan.md  worldgen-redesign-plan.md  worldgen-rivers-flow-investigation.md  worldgen-sanity-plan.md  worldgen-vulcanism-plan.md  worldgen_implementation.md
docs/worldgen-guide/: CONVENTIONS.md  phase-0-foundations.md  phase-1-terrain.md  phase-2-climate.md  phase-3-water.md  phase-4-magic-ecology.md  phase-5-assembly.md
evals/: datasets.py  run.py
log/: arcadedb.log.0  arcadedb.log.1
output/seed_layers/: README.md
scripts/: census.py  export_worldgen.py  generate_50plate_oceanic.py  generate_50plate_oceanic_climate.py  generate_50plate_worlds.py  generate_high_plate_count.py  generate_oceanic_world.py  generate_seed_layers.py  generate_terrain_with_plates.py  generate_ultra_plates.py  interrupt_sandbox.py  scan_seeds.py  view_worldgen.py  visualize_gradient.py  worldgen.py  worldgen_render.py
src/: bootstrap.py  character.py  engine.py  graph.py  lm.py  logging_utils.py  module.py  server.py  state.py  test.py
src/audio/: script.py
src/database/: connection.py  schema.py  server.py  store.py
src/factory/: world.py
src/graph/: __init__.py  intent_alignment_graph.py  logged_node.py  main_graph.py  resolution_graph.py  routers.py
src/log/: arcadedb.log.1  arcadedb.log.2
src/map/: __init__.py  config.py  generator.py  grid.py  heightmap.py  repository.py  river.py
src/module/: __init__.py  base.py  clarity_checker.py  narrator.py  question_generator.py  utils.py
src/node/: action_generator.py  ambush.py  ambush_scale.py  apply_effect.py  attribute_selector.py  candidate_sources.py  classify_threat.py  dice_scale.py  final_planner.py  gather_threats.py  held_planner.py  intent_synthesizer.py  narrator.py  reengage.py  resist_offer.py  resist_push_parser.py  resist_roll.py  roll_gate.py  segmenter.py  threat_channel.py  threat_magnitude.py  threat_type.py
src/nodes/: __init__.py  action_generator.py  base.py  clarity_generator.py  clarity_router.py  framing.py  intent_alignment_router.py  intent_clarification.py  intent_question_generator.py  intent_synthesizer.py  narrator.py  resistance.py  resolution.py  roll_gate.py  segmenter.py
src/script/: render.py
src/service/: body_builder.py  character.py  checkpoint.py  container.py  factory.py  graph.py  location.py  message.py  part.py  time.py  turn.py  world.py
src/services/: body_builder.py  character.py  checkpoint.py  container.py  economy.py  factory.py  graph.py  harm.py  location.py  map.py  message.py  (+3 more)
tests/: test_dice.py  test_economy.py  test_economy_service.py  test_evals.py  test_framing.py  test_harm.py  test_harm_service.py  test_push.py  test_resistance.py  test_resolution_pipeline.py  test_scaling.py  test_turn_effects.py
(+395 files in other folders)
