[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcadedb-embedded>=26.5.1.post1",
    "dspy-ai>=3.2.1",
    "fastapi>=0.115.0",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.0",
    "python-dotenv>=1.0.0",
    "textual>=0.80.0",
    "uvicorn[standard]>=0.30.0",
    "textual-canvas>=1.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
