[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcadedb-embedded>=26.5.1.post1",
    "dspy-ai>=3.2.1",
    "fastapi>=0.115.0",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.0",
    "python-dotenv>=1.0.0",
    "textual>=0.80.0",
    "uvicorn[standard]>=0.30.0",
    "textual-canvas>=1.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "miniaudio>=1.71"
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["test"]
python_files = ["*.py"]
addopts = "--import-mode=importlib"
filterwarnings = [
    "ignore:The 'prefix' argument in InputField:DeprecationWarning",
]


[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
# Curated for aesthetic uniformity, not bug-hunting or complexity opinions.
#   E,W  pycodestyle whitespace        I    import sorting (isort)
#   F    unused imports / names        Q    quote consistency
#   UP   modern syntax (str | None)    TID  tidy imports (ban relative)
#   COM  trailing commas               N    naming conventions
#   D    docstring style (imperative mood via D401)
select = ["E", "W", "F", "I", "UP", "Q", "COM", "TID", "N", "D"]
ignore = [
    # Don't force docstrings onto every module/class/function.
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    # Conflict with the formatter (Ruff's own recommendation).
    "COM812", "ISC001",
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "pep257"