[project]
name = "engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcadedb-embedded>=26.5.1.post1",
    "dspy-ai>=3.2.1",
    "fastapi>=0.115.0",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.0",
    "python-dotenv>=1.0.0",
    "textual>=0.80.0",
    "uvicorn[standard]>=0.30.0",
    "textual-canvas>=1.1.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "miniaudio>=1.71",
    "opensimplex>=0.4.5",
    "scipy>=1.14.0",
    "pillow>=11.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.15",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["test"]
python_files = ["*.py"]
addopts = "--import-mode=importlib"
filterwarnings = [
    "ignore:The 'prefix' argument in InputField:DeprecationWarning",
]


[tool.ruff.lint]
# Whitespace/layout: ruff format. Lint: unused imports (F401) and modern syntax (UP).
select = ["F401", "UP"]
